# afp2024

./: .gitignore  CMakeLists.txt  README.md
include/: breedenLitzenberger.hpp  bsmUtils.hpp  genNormDist.hpp  generator.hpp  pathMethods.hpp  py_manager.hpp  sobol.hpp  sp.hpp  tree.hpp
scripts/: plot_script.py
src/: generator.cpp  main.cpp  sobol.cpp  tree.cpp
